Source/WebCore: Invalidate SVG width on width attribute changes. https://bugs.webkit.org/show_bug.cgi?id=103304

Reviewed by Dirk Schulze.

An inline SVG element's replaced width can depend on both attributes and style properties.
After r105513, we invalidated this width on style changes but not attribute changes. With
this patch we invalidate the replaced width on width attribute changes too. Note that height
is handled differently for replaced elements so only the width attribute needs this handling
(the added test covers this too).

Test: svg/custom/root-size-attribute-changes.html

* svg/SVGSVGElement.cpp:
(WebCore::SVGSVGElement::svgAttributeChanged):

LayoutTests: Invalidate SVG width on width attribute change.
https://bugs.webkit.org/show_bug.cgi?id=103304

Reviewed by Dirk Schulze.

* svg/custom/root-size-attribute-changes-expected.html: Added.
* svg/custom/root-size-attribute-changes.html: Added.


Canonical link: https://commits.webkit.org/122015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136424 268f45cc-cd09-0410-ab3c-d52691b4dbfc