Source/WebCore/svg/SVGSVGElement.cpp
@@ -282,12 +282,21 @@ void SVGSVGElement::parseAttribute(const QualifiedName& name, const AtomicString
 void SVGSVGElement::svgAttributeChanged(const QualifiedName& attrName)
 { 
     bool updateRelativeLengthsOrViewBox = false;
-    if (attrName == SVGNames::widthAttr
+    bool widthChanged = attrName == SVGNames::widthAttr;
+    if (widthChanged
         || attrName == SVGNames::heightAttr
         || attrName == SVGNames::xAttr
         || attrName == SVGNames::yAttr) {
         updateRelativeLengthsOrViewBox = true;
         updateRelativeLengthsInformation();
+
+        // At the SVG/HTML boundary (aka RenderSVGRoot), the width attribute can
+        // affect the replaced size so we need to mark it for updating.
+        if (widthChanged) {
+            RenderObject* renderObject = renderer();
+            if (renderObject && renderObject->isSVGRoot())
+                toRenderSVGRoot(renderObject)->setNeedsLayoutAndPrefWidthsRecalc();
+        }
     }
 
     if (SVGFitToViewBox::isKnownAttribute(attrName)) {
